dropdown menu alignment corrected

--- a/src/main/resources/static/css/allEvents.css
+++ b/src/main/resources/static/css/allEvents.css
@@ -13,7 +13,7 @@ div.card {
     display: grid !important;
     place-items: center !important;
     position: relative !important;
-    background-color: rgba(255, 255, 255, 0.4) !important;
+    background-color: rgba(255, 255, 255, 0.3) !important;
     box-shadow: 0 5px 15px; rgba(0, 0, 0, 0.5) !important;
     height: 250px !important;
     width: 650px !important;
